[package]
name = "neodojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.7"
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive", "color"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.2"
codespan-reporting = "0.11.1"
colored = "2.1.0"
compose_spec = "0.2.0"
indent = "0.1.1"
indicatif = "0.17.8"
itertools = "0.12.1"
serde = { version = "1.0.201", features = ["derive"] }
serde-sarif = "0.4.2"
serde_json = "1.0.117"
structopt = "0.3.26"
tempfile = "3.10.1"
thiserror = "1.0.60"
